--- a/orders/orders-api/src/main/resources/config.yaml
+++ b/orders/orders-api/src/main/resources/config.yaml
@@ -9,7 +9,7 @@ kumuluzee:
       port: 8081
   datasources:
     - jndi-name: jdbc/OrdersDS
-      connection-url: jdbc:postgresql://192.168.99.100:5433/order
+      connection-url: jdbc:postgresql://postgres-orders:5432/order
       username: dbuser
       password: postgres
       max-pool-size: 20
@@ -24,7 +24,7 @@ kumuluzee:
   health:
       checks:
         data-source-health-check:
-          connection-url: jdbc:postgresql://192.168.99.100:5433/order
+          connection-url: jdbc:postgresql://postgres-orders:5432/order
           username: dbuser
           password: postgres
         disk-space-health-check:
