--- a/kubernetes/order-deployment.yaml
+++ b/kubernetes/order-deployment.yaml
@@ -16,6 +16,15 @@ spec:
         envFrom:
           - configMapRef:
               name: kubernetes-order-config
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8081
+          initialDelaySeconds: 30
+          periodSeconds: 5
+        resources:
+          limits:
+            cpu: 1
         ports:
         - containerPort: 8081
           name: server
